added variables and color change

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,10 +1,24 @@
 // fonts
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
+// abstracts
+@import './variables';
+@import './responsive';
+
 html {
   font-family: 'IBM Plex Sans', sans-serif;
 }
 
-// abstracts
-@import './variables';
-@import './responsive';
+.root {
+  background-color: $dark-background-color;
+  color: $dark-text-color;
+  min-height: 100vh;
+  min-width: 100vw;
+  height: 100%;
+  width: 100%;
+  transition: $transition-fast;
+  &.light {
+    color: $light-text-color;
+    background-color: $light-background-color;
+  }
+}
