--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,12 @@
 $light-background-color: #fff;
+$light-background-color-2: #ddd;
 $dark-background-color: #151515;
+$dark-background-color-2: #232323;
 $light-text-color: #000;
 $dark-text-color: #fff;
 
 $transition-fast: all 100ms ease;
 $transition-mid: all 200ms ease;
 $transition-slow: all 400ms ease;
+
+$navbar-height: 6rem;
