--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,4 +9,5 @@ $transition-fast: all 100ms ease;
 $transition-mid: all 200ms ease;
 $transition-slow: all 400ms ease;
 
-$navbar-height: 6rem;
+$navbar-height: 10rem;
+$footer-height: 5rem;
