started home page

--- a/src/components/Layout/Navbar/Sidebar/_index.scss
+++ b/src/components/Layout/Navbar/Sidebar/_index.scss
@@ -4,6 +4,7 @@
   top: $navbar-height;
   left: -100%;
   width: 100vw;
+  z-index: 100;
   background-color: $dark-background-color;
   &.active {
     left: 0;
