--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,6 +4,8 @@ $dark-background-color: #151515;
 $dark-background-color-2: #232323;
 $light-text-color: #000;
 $dark-text-color: #fff;
+$primary-color: #ffe367;
+$primary-color-2: #4daddb;
 
 $transition-fast: all 100ms ease;
 $transition-mid: all 200ms ease;
