added github section

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,6 +6,8 @@ $light-text-color: #000;
 $dark-text-color: #fff;
 $primary-color: #ffe367;
 $primary-color-2: #4daddb;
+$success-color: #00b74a;
+$danger-color: #f93154;
 
 $transition-fast: all 100ms ease;
 $transition-mid: all 200ms ease;
