--- a/src/styles/pages/_index.scss
+++ b/src/styles/pages/_index.scss
@@ -19,6 +19,7 @@
         margin-top: 2rem;
         font-size: 1.8rem;
         color: #888;
+        line-height: 2.3rem;
         b {
           color: $dark-text-color;
         }
@@ -37,12 +38,120 @@
       }
     }
   }
-  .WhatIDo {
-    margin-top: 8rem;
-    h1 {
+  .section {
+    margin-bottom: 6rem;
+    & > h1 {
       text-align: center;
       font-size: 3rem;
       text-transform: capitalize;
+      margin-bottom: 2rem;
+    }
+  }
+  .WhatIDo {
+    margin-top: 8rem;
+    .Talents {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 3rem;
+      .talent {
+        padding: 2rem;
+        border-radius: 1rem;
+        box-shadow: 0 2rem 4rem rgba(black, 0.3);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 100%;
+        gap: 1rem;
+        transition: $transition-slow;
+        &:hover {
+          transform: scale(1.01) translateY(-0.5rem);
+          .image {
+            transform: scale(1.2);
+          }
+        }
+        .image {
+          height: 12rem;
+          width: 12rem;
+        }
+        h3 {
+          font-size: 2rem;
+          text-transform: capitalize;
+        }
+        p {
+          font-size: 1.8rem;
+          line-height: 2.3rem;
+          color: #ccc;
+        }
+        .code {
+          font-size: 1.4rem;
+        }
+      }
+    }
+  }
+  .About {
+    .story {
+      margin: 0 auto;
+      font-size: 2rem;
+      text-align: center;
+    }
+  }
+  .Github {
+    .loader {
+      display: flex;
+      font-size: 5rem;
+      align-items: center;
+      justify-content: center;
+    }
+    .error {
+      h4 {
+        font-size: 2rem;
+        text-align: center;
+        color: $danger-color;
+      }
+    }
+    .Repos {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 3rem;
+      .repo {
+        padding: 2rem;
+        border-radius: 1rem;
+        background-color: $dark-background-color-2;
+        .title {
+          display: flex;
+          align-items: center;
+          font-size: 1.4rem;
+          gap: 1rem;
+          color: #ccc;
+          margin-bottom: 1.5rem;
+        }
+        .name {
+          font-size: 2rem;
+          font-family: monospace;
+          margin-bottom: 1.5rem;
+        }
+        .description {
+          font-size: 1.5rem;
+          margin-bottom: 1.5rem;
+          line-height: 2rem;
+          color: #ccc;
+        }
+        .bottom {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          width: 100%;
+          .star {
+            display: flex;
+            align-items: center;
+            gap: 0.6rem;
+            font-size: 1.4rem;
+            &-num {
+              font-weight: 700;
+            }
+          }
+        }
+      }
     }
   }
 }
@@ -59,6 +168,25 @@
       }
       .image {
         border-color: $primary-color-2;
+      }
+    }
+    .Talents {
+      .talent {
+        box-shadow: 0 1rem 2rem rgba(black, 0.2);
+        p {
+          color: #333;
+        }
+      }
+    }
+    .Github {
+      .Repos {
+        .repo {
+          background-color: $light-background-color-2;
+          .title,
+          .description {
+            color: #333;
+          }
+        }
       }
     }
   }
@@ -78,6 +206,29 @@
         order: 2;
         height: 20rem;
         width: 20rem;
+      }
+    }
+    .WhatIDo {
+      .Talents {
+        grid-template-columns: 1fr 1fr;
+      }
+    }
+    .Github {
+      .Repos {
+        grid-template-columns: 1fr 1fr;
+        .repo {
+          position: relative;
+          justify-content: center;
+          .description {
+            margin-bottom: 3.5rem;
+          }
+          .bottom {
+            padding: 0 2rem;
+            position: absolute;
+            bottom: 2rem;
+            left: 0;
+          }
+        }
       }
     }
   }
