--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,6 +4,7 @@
 // abstracts
 @import './variables';
 @import './responsive';
+@import './animations';
 
 html {
   font-family: 'IBM Plex Sans', sans-serif;
@@ -64,6 +65,17 @@ html {
   }
 }
 
+.code {
+  font-weight: 600;
+  font-family: monospace;
+  display: inline-block;
+  padding: 0.1rem 0.6rem;
+  margin: 0.2rem;
+  background-color: #555;
+  color: #222;
+  border-radius: 0.3rem;
+}
+
 .light {
   .gray-text {
     color: #888;
@@ -76,12 +88,19 @@ html {
       }
     }
   }
+  .code {
+    background-color: #888;
+    color: #ddd;
+  }
 }
 
 // components
 @import '../components/Layout/Navbar/index';
 @import '../components/Layout/Navbar/Sidebar/index';
 @import '../components/Layout/Footer/index';
+
+// components UI
+@import '../components/UI/LinkButton/index';
 
 // pages
 @import './pages/index';
