--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,5 @@
 $light-background-color: #fff;
-$light-background-color-2: #ddd;
+$light-background-color-2: #eee;
 $dark-background-color: #151515;
 $dark-background-color-2: #232323;
 $light-text-color: #000;
