--- a/src/components/Layout/Navbar/Sidebar/_index.scss
+++ b/src/components/Layout/Navbar/Sidebar/_index.scss
@@ -2,12 +2,26 @@
   height: calc(100vh - $navbar-height);
   position: fixed;
   top: $navbar-height;
-  left: -100%;
-  width: 100vw;
+  left: -100vw;
+  width: 100%;
   z-index: 100;
   background-color: $dark-background-color;
   &.active {
     left: 0;
+  }
+  transition: left 400ms ease;
+  padding: 2rem;
+  .link {
+    &:link,
+    &:visited {
+      color: inherit;
+      text-decoration: none;
+      display: block;
+      font-size: 2rem;
+      text-transform: capitalize;
+      padding: 2rem 0;
+      border-bottom: 0.2rem solid #444;
+    }
   }
 }
 
