--- a/src/styles/pages/_my-works.scss
+++ b/src/styles/pages/_my-works.scss
@@ -9,4 +9,77 @@
     text-align: center;
     font-size: 2rem;
   }
+  .hint {
+    font-size: 1.6rem;
+    text-align: center;
+    font-style: italic;
+    margin-top: 1rem;
+    color: #aaa;
+  }
+  .works {
+    margin: 4rem 0;
+    display: grid;
+    grid-template-columns: 1fr;
+    .work {
+      perspective: 100rem;
+      &:not(:last-child) {
+        margin-bottom: 4rem;
+      }
+      .name {
+        font-size: 1.7rem;
+        font-weight: 600;
+        margin-bottom: 0.5rem;
+      }
+      .desc {
+        margin-bottom: 2rem;
+        font-size: 1.5rem;
+        text-align: left;
+        color: #aaa;
+      }
+      .image {
+        cursor: pointer;
+        box-shadow: 0rem 1rem 1rem rgba(black, 0.3);
+        border-radius: 1rem;
+        &:hover {
+          img {
+            transform: scale(1.1);
+          }
+        }
+        img {
+          transition: all 500ms ease-in-out;
+          border-radius: 1rem;
+        }
+      }
+      .bottom {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 1rem;
+      }
+    }
+  }
+}
+
+.light {
+  .MyWorks {
+    .hint {
+      color: #555;
+    }
+    .works {
+      .work {
+        .desc {
+          color: #555;
+        }
+      }
+    }
+  }
+}
+
+@include tablet {
+  .MyWorks {
+    .works {
+      grid-template-columns: 1fr 1fr;
+      gap: 4rem;
+    }
+  }
 }
