--- a/src/components/Layout/Navbar/Sidebar/_index.scss
+++ b/src/components/Layout/Navbar/Sidebar/_index.scss
@@ -2,7 +2,7 @@
   height: calc(100vh - $navbar-height);
   position: fixed;
   top: $navbar-height;
-  left: -100vw;
+  left: -100%;
   width: 100%;
   z-index: 100;
   background-color: $dark-background-color;
