--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -8,6 +8,9 @@
 
 html {
   font-family: 'IBM Plex Sans', sans-serif;
+  max-width: 100vw;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 .root {
@@ -92,7 +95,7 @@ html {
   justify-content: center;
   position: fixed;
   bottom: 2rem;
-  right: -4rem;
+  right: -5rem;
   border-radius: 0.5rem;
   box-shadow: 0 1rem 1rem rgba(black, 0.3);
   &.active {
@@ -106,6 +109,7 @@ html {
   }
   .scroll-to-top {
     background-color: $light-background-color-2;
+    box-shadow: 0 0.5rem 1rem rgba(black, 0.3);
   }
   .my-link {
     &:link,
@@ -128,8 +132,10 @@ html {
 
 // components UI
 @import '../components/UI/LinkButton/index';
+@import '../components/Repo/index';
 
 // pages
 @import './pages/index';
 @import './pages/404';
 @import './pages/my-works';
+@import './pages/blog';
