added recent posts

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -133,6 +133,7 @@ html {
 // components UI
 @import '../components/UI/LinkButton/index';
 @import '../components/Repo/index';
+@import '../components/Post/index';
 
 // pages
 @import './pages/index';
