--- a/src/styles/pages/_blog.scss
+++ b/src/styles/pages/_blog.scss
@@ -40,8 +40,9 @@
     margin: 2rem 0;
     img {
       border-radius: 1rem;
-      width: calc(100vw - 8rem);
-      max-width: 700px;
+      width: 100%;
+      // width: calc(100vw - 8rem);
+      // max-width: 700px;
       margin: 2rem auto;
       display: block;
     }
