elaborated on about page

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,7 @@ $light-background-color: #fff;
 $light-background-color-2: #eee;
 $dark-background-color: #151515;
 $dark-background-color-2: #232323;
+$dark-background-color-3: #111;
 $light-text-color: #000;
 $dark-text-color: #fff;
 $primary-color: #ffe367;
