added framewroks animation and moved about page

--- a/src/components/Layout/Navbar/Sidebar/_index.scss
+++ b/src/components/Layout/Navbar/Sidebar/_index.scss
@@ -28,6 +28,12 @@
 .light {
   .Sidebar {
     background-color: $light-background-color;
+    .link {
+      &:link,
+      &:visited {
+        border-bottom-color: #ccc;
+      }
+    }
   }
 }
 
