changed heading font

--- a/src/styles/normalize.scss
+++ b/src/styles/normalize.scss
@@ -52,6 +52,15 @@ main {
 h1 {
   font-size: 2em;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+b {
+  font-family: 'Averia Serif Libre', sans-serif;
+}
 
 /* Grouping content
    ========================================================================== */
