--- a/src/components/Post/_index.scss
+++ b/src/components/Post/_index.scss
@@ -26,6 +26,7 @@
         text-decoration: none;
         font-size: 1.5rem;
         font-weight: 900;
+        font-family: 'Averia Serif Libre', sans-serif;
       }
     }
     p {
